--- a/samples/01.dice-roller/manifest/manifest.json
+++ b/samples/01.dice-roller/manifest/manifest.json
@@ -2,14 +2,14 @@
     "$schema": "https://developer.microsoft.com/en-us/json-schemas/teams/v1.12/MicrosoftTeams.schema.json",
     "version": "1.0.1",
     "manifestVersion": "1.12",
-    "id": "<<YOUR-MICROSOFT-APP-ID>>",
+    "id": "70e860c5-2bb8-45cb-8efb-dc1f94c26c92",
     "packageName": "com.microsoft.teams.livesharediceroller",
     "name": {
         "short": "DiceRollerLiveShre",
         "full": "Dice Roller Live Share"
     },
     "developer": {
-        "name": "Your name here",
+        "name": "Hackathon",
         "mpnId": "",
         "websiteUrl": "https://www.example.com",
         "privacyUrl": "https://www.example.com/PrivacyStatement",
@@ -26,7 +26,7 @@
     "accentColor": "#FFFFFF",
     "configurableTabs": [
         {
-            "configurationUrl": "https://<<BASE_URI_DOMAIN>>/?view=config&inTeams=1&load=1",
+            "configurationUrl": "https://61b5-2404-f801-8028-1-287b-6139-c7a1-f7a7.in.ngrok.io/?view=config&inTeams=1&load=1",
             "canUpdateConfiguration": false,
             "scopes": [
                 "groupchat"
