--- a/samples/01.dice-roller/package.json
+++ b/samples/01.dice-roller/package.json
@@ -11,7 +11,7 @@
         "build:dev": "webpack --env clean",
         "start": "start-server-and-test start:server 7070 start:client",
         "start:client": "webpack serve",
-        "start:server": "npx @fluidframework/azure-local-service@latest"
+        "start:server": "npx tinylicious@0.4.57763"
     },
     "dependencies": {
         "@fluidframework/test-client-utils": "~1.2.3",
