--- a/samples/21.react-media-template/package.json
+++ b/samples/21.react-media-template/package.json
@@ -15,12 +15,16 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.2.1",
     "fluid-framework": "~1.2.3",
     "lodash": "^4.17.21",
-    "react": "^17.0.0",
+    "react": "^17.0.2",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^17.0.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "^4.0.0",
+    "react-spotify-web-playback": "^0.10.0",
+    "spotify-web-api-js": "^1.5.2",
     "use-resize-observer": "^8.0.0",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
@@ -38,7 +42,7 @@
     "clean": "npx shx rm -rf build",
     "start": "start-server-and-test start:server 7070 start:client",
     "start:client": "react-scripts start",
-    "start:server": "npx @fluidframework/azure-local-service@latest",
+    "start:server": "npx tinylicious@0.4.57763",
     "build": "react-scripts build",
     "build:dev": "dotenv -e .env.development react-scripts build",
     "test": "react-scripts test",
